[FIXED] Wrong colors

--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -96,7 +96,7 @@
       .track-info{
         width: 90%;
         height: 1px;
-        background-color: mat-color($app-warn);
+        background-color: mat-color($app-light);
         margin: -10px auto;
         transition: ease .2s all;
       }
